# trident

./: CMakeLists.txt  README.md  bot_launch.ign  imu_node.cc  main.py  mpu.py
model/: model.config  model.sdf
sub_2_description/: CMakeLists.txt  package.xml
sub_2_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
sub_2_description/meshes/: base_link.stl
sub_2_description/urdf/: materials.xacro  sub_2.gazebo  sub_2.trans  sub_2.xacro
worlds/: building_robot.sdf  moving_robot.sdf  water_world.sdf
